apps/homepage/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homepage.internal`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
